--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -7,10 +7,20 @@
     android:background="#FFFFFF">
 
     <TextView
-        android:id="@+id/widget_text"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewLast7DaysPushups"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Widget"
-        android:textSize="16sp"
-        android:textColor="#000000" />
+        android:layout_margin="2sp"
+        android:text="L7D: 0"
+        android:textSize="20sp"
+        android:textColor="@android:color/black" />
+
+    <TextView
+        android:id="@+id/textViewPrev7DaysPushups"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2sp"
+        android:text="P7D: 0"
+        android:textSize="20sp"
+        android:textColor="@android:color/black" />
 </LinearLayout>
