--- a/app/src/main/res/layout/activity_week_overview.xml
+++ b/app/src/main/res/layout/activity_week_overview.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/fallout_background"
+    android:textColor="@color/fallout_green"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -17,5 +19,6 @@
         android:id="@+id/buttonBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/fallout_yellow"
         android:text="Back" />
 </LinearLayout>
