--- a/app/src/main/res/layout/item_week_overview.xml
+++ b/app/src/main/res/layout/item_week_overview.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/fallout_background"
     android:orientation="horizontal"
     android:padding="8dp">
 
@@ -10,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textColor="@color/fallout_green"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -17,6 +19,7 @@
         android:id="@+id/textViewTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/fallout_green"
         android:textSize="18sp"
         android:layout_marginStart="16dp" />
 </LinearLayout>
